# WebGL2-WASM-Experiments

./: CMakeLists.txt  LICENSE  Makefile  README.md  index.html
res/: fs.glsl  vs.glsl
src/: callbacks.c  callbacks.h  camera.c  camera.h  loader.c  loader.h  main.c  matrix.c  matrix.h  scene.c  scene.h  util.c  util.h  vector.c  vector.h
